--- a/index.html
+++ b/index.html
@@ -19,3 +19,30 @@ var renderer = new THREE.WebGLRenderer();
 renderer.setSize( window.innerWidth, window.innerHeight );
 document.body.appendChild( renderer.domElement );
 
+  window.addEventLisener('resize', function(){
+    renderer.setSize(window.innerWidth, window.innerHeight);
+camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+  }, false );
+  
+  var geometry = new THREE.BoxGeometry( 1, 1, 1 );
+  var material = new THREE.MeshBasicMaterial ({color: 0xccffcc});
+  var mesh = new THREE.Mesh( geometry, material );
+  scene.add( mesh );
+  
+  camera.position.z = 5;
+  
+  var clock = new THREE.Clock();
+  var render = function () {
+    requestAnimationFrame( render );
+    
+    var delta_time = clock.getDelta();
+    mesh.rotation.x += 0.1 * delta_time;
+     mesh.rotation.y += 0.3 * delta_time;
+    
+    renderer.render(scene, camera);
+  };
+  render();
+  </script>
+    </body>
+    </html>
