--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ canvas { width: 100%; height: 100% }
 <body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.mis.js."></script>
 <script type="text/javascript">
-var scene = new THREE.Scene();
+var scene = new THREE.Scene():
 var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
 
 var renderer = new THREE.WebGLRenderer();
