--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@ camera.aspect = window.innerWidth / window.innerHeight;
   scene.add(light);
   scene.add(new THREE.AmbientLight(0x666666));
   
-  var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-  var material = new THREE.MeshBasicMaterial ({color: 0xccffcc});
+  var loader = new THREE.TextureLoader();
+  var geometry = new THREE.BoxGeometry( 1, 32, 16 );
+  var material = new THREE.MeshBasicMaterial ({
+    color: 0xccffcc,
+  map: loader.load('earth.jpg')});
   var mesh = new THREE.Mesh( geometry, material );
   scene.add( mesh );
   
