--- a/index.html
+++ b/index.html
@@ -38,7 +38,30 @@ camera.aspect = window.innerWidth / window.innerHeight;
   var mesh = new THREE.Mesh( geometry, material );
   scene.add( mesh );
   
-  camera.position.z = 5;
+  
+  var particle_geometry = new THREE.Geometry();
+  var numParticles = 2000;
+  for(var i = 0 ; i < numParticles ; i++) {
+    particle_geometry.vertices.push(
+      new THREE.Vector3(
+        Math.random() * 20 - 10,
+        Math.random() * 20 - 10,
+        Math.random() * 20 - 10));
+  }
+  
+  var particle_material = new THREE.PointsMateral({
+    size: 0.01,
+    color: 0x80ffccaa,
+    blending: THREE.AdditiveBlending,
+    transparent: true,
+    depthTest: true
+  });
+    
+  
+  var emitter = new THREE.Points(particle_geometry, particle_material);
+  scene.add(emitter);
+  
+  camera.position.z = 3;
   
   var clock = new THREE.Clock();
   var render = function () {
