--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ var renderer = new THREE.WebGLRenderer();
 renderer.setSize( window.innerWidth, window.innerHeight );
 document.body.appendChild( renderer.domElement );
 
-  window.addEventLisener('resize', function(){
+  window.addEventListener('resize', function(){
     renderer.setSize(window.innerWidth, window.innerHeight);
 camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
