--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ camera.aspect = window.innerWidth / window.innerHeight;
         Math.random() * 20 - 10));
   }
   
-  var particle_material = new THREE.PointsMateral({
+  var particle_material = new THREE.PointsMaterial({
     size: 0.01,
     color: 0x80ffccaa,
     blending: THREE.AdditiveBlending,
